--- a/src/styles/objects/projects/auth-form.module.scss
+++ b/src/styles/objects/projects/auth-form.module.scss
@@ -2,15 +2,21 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  width: 239px;
+  margin: 0 auto;
   text-align: center;
+
+  &__logo {
+    margin: 50px 0 30px;
+  }
 
   &__label {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 239px;
+    max-width: 100%;
     height: 34px;
-    margin: 0 auto;
+    padding: 0 8px;
     font-size: 14px;
     border: solid 1px var(--color-gray);
     border-radius: 17px;
@@ -21,13 +27,28 @@
   }
 
   &__input {
-    width: 200px;
+    width: 100vw;
+    max-width: 100%;
     border-style: none;
   }
 
   &__icon {
-    padding: 0 3px 0 5px;
-    font-size: 1.2rem;
+    padding: 3px 5px 0 0;
     color: var(--color-gray);
+  }
+
+  &__submit {
+    width: 100%;
+    height: 34px;
+    margin-top: 20px;
+    font-size: 14px;
+    color: var(--color-cream);
+    background-color: var(--color-black);
+    border: solid 1px var(--color-gray);
+    border-radius: 17px;
+  }
+
+  &__link {
+    margin-bottom: 40px;
   }
 }
