--- a/src/styles/objects/projects/auth-form.module.scss
+++ b/src/styles/objects/projects/auth-form.module.scss
@@ -6,49 +6,11 @@
   margin: 0 auto;
   text-align: center;
 
-  &__logo {
-    margin: 50px 0 30px;
-  }
-
-  &__label {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    max-width: 100%;
-    height: 34px;
-    padding: 0 8px;
-    font-size: 14px;
-    border: solid 1px var(--color-gray);
-    border-radius: 17px;
-
-    :focus {
-      outline: none;
-    }
-  }
-
-  &__input {
-    width: 100vw;
-    max-width: 100%;
-    border-style: none;
-  }
-
-  &__icon {
-    padding: 3px 5px 0 0;
-    color: var(--color-gray);
-  }
-
-  &__submit {
-    width: 100%;
-    height: 34px;
+  button {
     margin-top: 20px;
-    font-size: 14px;
-    color: var(--color-cream);
-    background-color: var(--color-black);
-    border: solid 1px var(--color-gray);
-    border-radius: 17px;
   }
+}
 
-  &__link {
-    margin-bottom: 40px;
-  }
+.link {
+  margin-bottom: 40px;
 }
