fix: :bug: styleの修正

--- a/src/app/_components/common/Button.module.scss
+++ b/src/app/_components/common/Button.module.scss
@@ -1,14 +1,14 @@
 .button {
   justify-content: center;
   width: 100%;
-  height: auto;
+  height: 36px;
   padding: 5px;
-  font-size: 14px;
+  font-size: 16px;
   color: var(--color-cream);
   text-align: center;
   background-color: var(--color-black);
   border: solid 1px var(--color-gray);
-  border-radius: 17px;
+  border-radius: 5px;
 }
 
 .black {
