feat: :sparkles: サインインとサインアップのapi通信の実装

--- a/src/styles/_base.module.scss
+++ b/src/styles/_base.module.scss
@@ -90,6 +90,7 @@ h5 {
   --color-orange: #ffb562;
   --color-pink: #f87474;
   --color-gray: #97999d;
+  --color-light-gray: #eee;
   --color-emerald: #00adb5;
 
   // easing
