--- a/src/app/_components/common/formParts/AuthForm.module.scss
+++ b/src/app/_components/common/formParts/AuthForm.module.scss
@@ -2,8 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  width: 240px;
-  margin: 0 auto;
   text-align: center;
 
   button {
@@ -11,6 +9,10 @@
   }
 }
 
-.link {
-  margin-bottom: 96px;
+.validation {
+  margin-top: 4px;
+  margin-left: 4px;
+  font-size: 12px;
+  color: var(--color-pink);
+  text-align: left;
 }
