--- a/src/app/_components/layouts/Content.module.scss
+++ b/src/app/_components/layouts/Content.module.scss
@@ -1,6 +1,8 @@
 .contents {
   flex-grow: 1;
+  width: 240px;
   padding-block-start: 24px;
+  margin: 0 auto 80px;
   background-color: var(--color-white);
   background-size: 32px 32px;
 }
