--- a/src/app/_components/layouts/Header.module.scss
+++ b/src/app/_components/layouts/Header.module.scss
@@ -2,7 +2,7 @@
   align-items: center;
   width: 100%;
   height: 96px;
-  background-color: gray;
+  background-color: var(--color-gray);
 }
 
 .link {
