--- a/src/app/(auth)/AuthForm.module.scss
+++ b/src/app/(auth)/AuthForm.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  max-width: 240px;
+  margin: 0 auto;
   text-align: center;
 
   button {
