--- a/src/features/calender/components/CalenderHeader.module.scss
+++ b/src/features/calender/components/CalenderHeader.module.scss
@@ -2,18 +2,29 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
 
-  > h1,
-  h3 {
+  > h3 {
     margin: 0;
+  }
+
+  > h1 {
+    margin: 2px 0;
   }
 }
 
-.selectButton {
+.buttonGroup {
   display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+}
+
+.calenderHeader {
+  display: flex;
+  flex-direction: row;
+  align-items: end;
+  justify-content: space-between;
+  margin-bottom: 5px;
 }
 
 .flexRow {
