--- a/src/features/calender/components/Month.module.scss
+++ b/src/features/calender/components/Month.module.scss
@@ -1,4 +1,4 @@
-.weekBox {
+.weekDayLine {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   align-items: center;
@@ -6,7 +6,7 @@
   padding: 22px 0;
 }
 
-.weekLine {
+.calenderBody {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   align-items: center;
