--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,8 +1,13 @@
 .floatingAction {
-  position: fixed;
-  right: 32px;
-  bottom: 32px;
+  position: sticky;
+  bottom: 80px;
+  left: 0;
   z-index: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: end;
+  margin: 10px;
 }
 
 .icon {
