--- a/src/components/layouts/Content.module.scss
+++ b/src/components/layouts/Content.module.scss
@@ -1,8 +1,9 @@
 .contents {
   flex-grow: 1;
   width: 420px;
+  max-width: 100%;
   padding-block-start: 24px;
-  margin: 0 auto 80px;
+  margin: 0 auto;
   background-color: var(--color-white);
   background-size: 32px 32px;
 }
