--- a/src/features/calender/components/Day.module.scss
+++ b/src/features/calender/components/Day.module.scss
@@ -9,7 +9,10 @@
 }
 
 .emptyCells {
-  flex: 1;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
   margin-top: 10px;
   border: 1px solid var(--color-gray);
 }
