--- a/src/features/calender/components/organisms/CalenderHeader.module.scss
+++ b/src/features/calender/components/organisms/CalenderHeader.module.scss
@@ -1,24 +1,3 @@
-.title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  > h3 {
-    margin: 0;
-  }
-
-  > h1 {
-    margin: 2px 0;
-  }
-}
-
-.buttonGroup {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .calenderHeader {
   display: flex;
   flex-direction: row;
@@ -27,7 +6,28 @@
   margin-bottom: 5px;
 }
 
-.flexRow {
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  > .yearText {
+    font-size: 17px;
+  }
+
+  > .monthText {
+    font-size: 29px;
+  }
+}
+
+.calenderDisplayControllers {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.selectThemeButtons {
   display: flex;
   flex-direction: row;
   align-items: center;
