--- a/src/features/calender/components/organisms/DayCalender.module.scss
+++ b/src/features/calender/components/organisms/DayCalender.module.scss
@@ -1,18 +1,17 @@
-.dateWeekdayPair {
+.dateSlot {
   display: inline-flex;
   flex-direction: column;
-  margin: 0 0 15px 5px;
 }
 
-.calenderBody {
+.dateGrid {
   display: flex;
+  margin-top: 10px;
 }
 
-.emptyCells {
+.timeCellsWrapper {
   display: flex;
-  flex-direction: row;
   width: 100%;
   height: 100%;
-  margin-top: 10px;
+  margin-top: 12px;
   border: 1px solid var(--color-gray);
 }
