--- a/src/features/calender/components/organisms/MonthCalender.module.scss
+++ b/src/features/calender/components/organisms/MonthCalender.module.scss
@@ -1,4 +1,4 @@
-.weekDayLine {
+.weekdaySlot {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   align-items: center;
@@ -6,17 +6,10 @@
   padding: 22px 0;
 }
 
-.calenderBody {
+.dateGrid {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   align-items: center;
   justify-content: center;
   border: 1px solid var(--color-gray);
-}
-
-.dayBox {
-  width: 100%;
-  height: 96px;
-  text-align: center;
-  border: solid 1px var(--color-gray);
 }
