--- a/src/features/calender/components/organisms/WeekCalender.module.scss
+++ b/src/features/calender/components/organisms/WeekCalender.module.scss
@@ -1,25 +1,26 @@
-.dateWeekdayPair {
+.dateSlot {
   display: flex;
   flex-direction: row;
-  margin: 0 0 15px 46px;
+  margin-left: 46px;
 }
 
-.dateWeekdayBox {
+.dayWeekdayCell {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
 }
 
-.calenderBody {
+.dateGrid {
   display: flex;
+  width: 100%;
+  margin-top: 10px;
 }
 
-.emptyCells {
+.timeCellsWrapper {
   display: flex;
-  flex-direction: row;
   width: 100%;
   height: 100%;
-  margin-top: 10px;
+  margin-top: 12px;
   border: 1px solid var(--color-gray);
 }
