--- a/src/styles/_base.module.scss
+++ b/src/styles/_base.module.scss
@@ -1,5 +1,11 @@
 @use './typography.module' as *;
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   @include paragraph4;
 
@@ -82,7 +88,6 @@ h5 {
     'ＭＳ Ｐゴシック', 'ＭＳ ゴシック', serif;
   --font-logo: 'Montserrat', sans-serif;
   --font-extend: 'pnum' on, 'lnum' on;
-  --width-max: 959px;
   --color-white: #fffffe;
   --color-black: #2b2c34;
   --color-cream: #f9f2ed;
