--- a/src/features/calender/components/organisms/CalenderHeader.module.scss
+++ b/src/features/calender/components/organisms/CalenderHeader.module.scss
@@ -23,13 +23,14 @@
 .calenderDisplayControllers {
   display: flex;
   flex-direction: row;
+  gap: 24px;
   align-items: center;
-  justify-content: space-between;
+  margin-bottom: 8px;
+  text-align: center;
 }
 
 .selectThemeButtons {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
 }
