--- a/src/features/calender/components/atoms/DayCell.module.scss
+++ b/src/features/calender/components/atoms/DayCell.module.scss
@@ -2,5 +2,5 @@
   width: 100%;
   height: 96px;
   text-align: center;
-  border: solid 1px var(--color-gray);
+  border: solid 1px var(--color-calender-table-line);
 }
