--- a/src/features/calender/components/atoms/TimeCell.module.scss
+++ b/src/features/calender/components/atoms/TimeCell.module.scss
@@ -2,5 +2,5 @@
   position: relative;
   width: 100%;
   height: 60px;
-  border: 1px solid var(--color-gray);
+  border: 1px solid var(--color-calender-table-line);
 }
