--- a/src/features/calender/components/atoms/WeekdayText.module.scss
+++ b/src/features/calender/components/atoms/WeekdayText.module.scss
@@ -6,11 +6,11 @@
   text-align: center;
 
   &.sunday {
-    color: var(--color-pink);
+    color: var(--color-calender-text-sunday);
   }
 
   &.saturday {
-    color: var(--color-light-blue);
+    color: var(--color-calender-text-saturday);
   }
 
   &.ordinaryDay {
