--- a/src/features/calender/components/organisms/DayCalender.module.scss
+++ b/src/features/calender/components/organisms/DayCalender.module.scss
@@ -13,5 +13,5 @@
   width: 100%;
   height: 100%;
   margin-top: 12px;
-  border: 1px solid var(--color-gray);
+  border: 1px solid var(--color-calender-table-line);
 }
