--- a/src/features/calender/components/organisms/MonthCalender.module.scss
+++ b/src/features/calender/components/organisms/MonthCalender.module.scss
@@ -11,5 +11,5 @@
   grid-template-columns: repeat(7, 1fr);
   align-items: center;
   justify-content: center;
-  border: 1px solid var(--color-gray);
+  border: 1px solid var(--color-calender-table-line);
 }
