--- a/src/features/calender/components/atoms/DayCell.module.scss
+++ b/src/features/calender/components/atoms/DayCell.module.scss
@@ -1,6 +1,7 @@
 .dayCell {
   width: 100%;
   height: 96px;
+  overflow: hidden;
   text-align: center;
   border: solid 1px var(--color-calender-table-line);
 }
