--- a/src/features/calender/components/organisms/WeekCalender.module.scss
+++ b/src/features/calender/components/organisms/WeekCalender.module.scss
@@ -24,3 +24,9 @@
   margin-top: 12px;
   border: 1px solid var(--color-calender-table-line);
 }
+
+.eventContent {
+  position: absolute;
+  width: 53px;
+  height: 60px;
+}
