--- a/src/features/calender/components/atoms/EventLabel.module.scss
+++ b/src/features/calender/components/atoms/EventLabel.module.scss
@@ -1,21 +1,21 @@
 .eventLabel {
   padding: 1px;
-  overflow: hidden;
   font-size: 14px;
   font-weight: bold;
   color: #fff;
+  text-align: start;
   word-break: keep-all;
   background-color: var(--color-orange);
   border: solid 1px var(--color-white);
   border-radius: 5px;
 }
 
-.dayCalendar {
-  width: auto;
-  height: 24px;
+.monthCalendar {
+  position: absolute;
 }
 
-.weekMonthCalendar {
+.weekDayCalendar {
   position: absolute;
   top: 0;
+  overflow: hidden;
 }
